--- a/kvm-worker.json5
+++ b/kvm-worker.json5
@@ -5,7 +5,8 @@
     triton_key_path: "{{ env `SDC_KEY_PATH` }}",
     triton_url: "{{ env `SDC_URL` }}",
     triton_bastion_host: "{{ env `BASTION_HOST` }}",
-    triton_private_network: "{{ env `PRIVATE_NETWORK` }}",
+    triton_public_network: "{{ env `PUBLIC_NETWORK` }}",
+    source_machine_package: "{{ env `SOURCE_MACHINE_NETWORK` }}",	
     image_name: "k8s-worker-kvm-16.04",
     image_version: "1.0.0",
   },
@@ -20,12 +21,12 @@
       triton_key_material: "{{ user `triton_key_path` }}",
 
       source_machine_name: "k8s-worker-kvm-builder",
-      source_machine_package: "k4-highcpu-kvm-3.75G",
+      source_machine_package: "{{ user `source_machine_package` }}",
       source_machine_image: "554abb2e-a957-4b51-a601-97c934eadf33",
 
-      // Private network for control plane only
+      // Public Network for Building
       source_machine_networks: [
-        "{{ user `triton_private_network` }}",
+        "{{ user `triton_public_network` }}",
       ],
 
       // `ubuntu` user for ubuntu certified images
