--- a/lx-bastion.json5
+++ b/lx-bastion.json5
@@ -5,7 +5,7 @@
     triton_key_path: "{{ env `SDC_KEY_PATH` }}",
     triton_url: "{{ env `SDC_URL` }}",
     triton_public_network: "{{ env `PUBLIC_NETWORK` }}",
-    triton_private_network: "{{ env `PRIVATE_NETWORK` }}",
+    source_machine_package: "{{ env `SOURCE_MACHINE_PACKAGE` }}", 
     image_name: "k8s-bastion-lx-16.04",
     image_version: "1.0.0",
   },
@@ -20,13 +20,12 @@
       triton_key_material: "{{ user `triton_key_path` }}",
 
       source_machine_name: "k8s-bastion-lx-builder",
-      source_machine_package: "g4-highcpu-2G",
+      source_machine_package: "{{ user `source_machine_package` }}",
       source_machine_image: "7b5981c4-1889-11e7-b4c5-3f3bdfc9b88b",
 
-      // Both the private and public networks
+      // Public Networks for Building
       source_machine_networks: [
         "{{ user `triton_public_network` }}",
-        "{{ user `triton_private_network` }}",
       ],
 
       // `root` user for Joyent ubuntu images
