--- a/lx-controller.json5
+++ b/lx-controller.json5
@@ -5,7 +5,8 @@
     triton_key_path: "{{ env `SDC_KEY_PATH` }}",
     triton_url: "{{ env `SDC_URL` }}",
     triton_bastion_host: "{{ env `BASTION_HOST` }}",
-    triton_private_network: "{{ env `PRIVATE_NETWORK` }}",
+    triton_public_network: "{{ env `PUBLIC_NETWORK` }}",
+    source_machine_package: "{{ env `SOURCE_MACHINE_PACKAGE` }}",
     image_name: "k8s-controller-lx-16.04",
     image_version: "1.0.0",
   },
@@ -18,14 +19,13 @@
       triton_account: "{{ user `triton_account` }}",
       triton_key_id: "{{ user `triton_key_id` }}",
       triton_key_material: "{{ user `triton_key_path` }}",
-
       source_machine_name: "k8s-controller-lx-builder",
-      source_machine_package: "g4-highcpu-2G",
+      source_machine_package: "{{ user `source_machine_package }}",
       source_machine_image: "7b5981c4-1889-11e7-b4c5-3f3bdfc9b88b",
 
-      // Private network for control plane only
+      // Public Network for Building
       source_machine_networks: [
-        "{{ user `triton_private_network` }}",
+        "{{ user `triton_public_network` }}",
       ],
 
       // `root` user for Joyent ubuntu images
